--- a/Instagram/app/src/main/res/values/strings.xml
+++ b/Instagram/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="home">Home</string>
     <string name="camera">Camera</string>
     <string name="profile">Profile</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string> //for checking if the fragment is working
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    //for checking if the fragment is working
 </resources>
